--- a/core/data/main/podcast/zupftest.html
+++ b/core/data/main/podcast/zupftest.html
@@ -455,6 +455,10 @@
             background: rgba(212, 175, 55, 0.1) !important;
         }
 
+        .info-text.visible {
+            display: block !important;
+        }
+
         .info-text {
             display: none;
             background: rgba(0, 0, 0, 0.3);
