--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -452,6 +452,10 @@
             color: #2ecc71;
         }
 
+        .info-text.visible {
+            display: block !important;
+        }
+
         .info-text {
             display: none;
             background: rgba(0, 0, 0, 0.3);
