--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -519,6 +519,10 @@
             background: rgba(212, 175, 55, 0.1) !important;
         }
 
+        .info-text.visible {
+            display: block !important;
+        }
+
         .info-text {
             display: none;
             background: rgba(0, 0, 0, 0.3);
@@ -605,6 +609,10 @@
             background: rgba(40, 167, 69, 0.2);
             border-color: rgba(40, 167, 69, 0.5);
             color: #2ecc71;
+        }
+
+        .info-text.visible {
+            display: block !important;
         }
 
             .info-text {
