Fix Cowork cover order, restore abook flip, and add iPhone widget meta tags

--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Episode VI - aBook - Villa Kunterbunt Cowork</title>
+
+    <!-- SEO / Social Media -->
+    <meta property="og:title" content="Die Villa Kunterbunt - Episode VI (aBook)">
+    <meta property="og:description" content="Klassische Bürokratie trifft auf moderne Korrespondenz.">
+    <meta property="og:image"
+        content="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_front_thumb.png">
+    <link rel="apple-touch-icon"
+        href="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_front_thumb.png">
     <meta name="description"
         content="Episode VI: aBook. Die sechste Episode als Hörbuch. Ein Cowork Podcast aus dem Coworking Space.">
     <!-- Google Fonts for premium typography -->
@@ -133,17 +141,47 @@
             border-color: rgba(255, 255, 255, 0.15);
         }
 
-        .cover-art {
+        .cover-flip-container {
             width: 200px;
             height: 200px;
-            border-radius: 12px;
-            object-fit: cover;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            transition: transform 0.3s ease;
+            perspective: 1000px;
+            cursor: pointer;
+            margin: 0 auto;
         }
 
-        .cover-art:hover {
-            transform: scale(1.02);
+        .cover-flip-container .flipper {
+            width: 100%;
+            height: 100%;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
+            position: relative;
+        }
+
+        .cover-flip-container.flipped .flipper {
+            transform: rotateY(180deg);
+        }
+
+        .front,
+        .back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            -webkit-backface-visibility: hidden;
+            border-radius: 12px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+        }
+
+        .front img,
+        .back img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 12px;
+        }
+
+        .back {
+            transform: rotateY(180deg);
         }
 
         .episode-tag {
@@ -572,14 +610,16 @@
                  Wait, I swapped them in index.html to put audiobook_cover_back FIRST.
                  So here I will use audiobook_cover_back as the main image to match the user's preference for "start position".
             -->
-            <div class="cover-container">
-                <div class="front">
-                    <img src="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_front_thumb.png"
-                        alt="Front Cover">
-                </div>
-                <div class="back">
-                    <img src="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_back_thumb.png"
-                        alt="Back Cover">
+            <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
+                <div class="flipper">
+                    <div class="front">
+                        <img src="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_front_thumb.png"
+                            alt="Front Cover">
+                    </div>
+                    <div class="back">
+                        <img src="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_back_thumb.png"
+                            alt="Back Cover">
+                    </div>
                 </div>
             </div>
 
@@ -814,7 +854,7 @@
                         artist: "Villa Kunterbunt",
                         album: "Die Villa Kunterbunt",
                         artwork: [
-                            { src: new URL("../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_front_thumb.png", window.location.href).href, sizes: '512x512', type: 'image/png' }
+                            { src: new URL("../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_back_thumb.png", window.location.href).href, sizes: '512x512', type: 'image/png' }
                         ]
                     });
 
