--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -802,8 +802,8 @@
                 const absoluteArtworkUrl = new URL(artworkPath, window.location.href).href;
 
                 setupMediaSession(audio, {
-                    title: "Episode VI: Die Anthologie",
-                    artist: "Villa Kunterbunt",
+                    title: "Die Anthologie | Episode VI - Das Hörbuch (beta)",
+                    artist: "Die Villa Kunterbunt",
                     album: "Die Villa Kunterbunt",
                     artwork: [
                         { src: absoluteArtworkUrl, sizes: '512x512', type: 'image/png' }
