Implement Main Audiobook, clean up legacy episodes, and standardize metadata

--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Die Villa Kunterbunt - Das Audio Epos</title>
+    <title>Die Villa Kunterbunt | Das Audio Epos</title>
     <meta name="description"
         content="Die Audio-Dokumentation zum Fall Villa Kunterbunt vs. E.ON & Bayernwerk. Erfahrungen, Hintergründe und die Analyse eines administrativen Versagens.">
+
+    <!-- SEO / Social Media -->
+    <meta property="og:title" content="Die Villa Kunterbunt | Das Audio Epos">
+    <meta property="og:description" content="Systemanalyse und Korrespondenz Berichte.">
+    <meta property="og:image" content="../images/thumbs/die_villa_kunterbunt_abook_cover_front_thumb.png">
+    <link rel="apple-touch-icon" href="../images/thumbs/die_villa_kunterbunt_abook_cover_front_thumb.png">
     <!-- Google Fonts for premium typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -662,6 +668,35 @@
         </div>
 
         <div class="episode-list">
+
+            <!-- Audiobook Highlight -->
+            <article class="episode-card fade-in-up"
+                style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.05);">
+                <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_front_thumb.png"
+                                alt="Audiobook Front">
+                        </div>
+                        <div class="back">
+                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png"
+                                alt="Audiobook Back">
+                        </div>
+                    </div>
+                </div>
+                <div class="episode-content">
+                    <div class="episode-tag">Das Hörbuch</div>
+                    <h2 class="episode-title">Die Villa Kunterbunt (Epos)</h2>
+                    <div class="episode-description">
+                        Die vollständige Dokumentation als zusammenhängendes Hörbuch. Erleben Sie das gesamte Audio-Epos
+                        in einer Fassung.
+                    </div>
+                    <div style="margin-top: 15px; text-align: center; width: 100%;">
+                        <a href="abook.html" class="action-link" style="background: rgba(212, 175, 55, 0.2);">Zum
+                            Hörbuch</a>
+                    </div>
+                </div>
+            </article>
 
             <!-- Episode 1 -->
             <article class="episode-card fade-in-up delay-1">
