Add visible page titles to Cowork and Main audiobook pages

--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -624,6 +624,7 @@
             </div>
 
             <div class="episode-tag">Die Villa Kunterbunt Anthologie (Hörbuch)</div>
+            <h2 class="episode-title">Das Hörbuch (beta)</h2>
 
             <div class="info-bar">
                 <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
