--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -561,6 +561,7 @@
             </div>
 
             <div class="episode-tag">Das Hörbuch</div>
+            <h2 class="episode-title">Die Villa Kunterbunt (Epos)</h2>
 
             <div class="info-bar">
                 <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
