--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -195,6 +195,25 @@
             font-family: 'Playfair Display', serif;
             font-size: 2.2rem;
             margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+        }
+
+        .badge {
+            display: inline-block;
+            padding: 2px 10px;
+            font-size: 0.8rem;
+            font-weight: 700;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            border-radius: 4px;
+            background: var(--accent-gold);
+            color: var(--bg-dark);
+            vertical-align: middle;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+            font-family: 'Inter', sans-serif;
         }
 
         .episode-description {
@@ -561,7 +580,7 @@
             </div>
 
             <div class="episode-tag">Das Hörbuch</div>
-            <h2 class="episode-title">Die Villa Kunterbunt (Epos)</h2>
+            <h2 class="episode-title">Die Villa Kunterbunt (Epos) <span class="badge">BETA</span></h2>
 
             <div class="info-bar">
                 <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
