--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -208,8 +208,26 @@
         .episode-title {
             font-family: 'Playfair Display', serif;
             font-size: 1.8rem;
-            margin: 0 0 10px;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            gap: 12px;
             line-height: 1.2;
+        }
+
+        .badge {
+            display: inline-block;
+            padding: 2px 8px;
+            font-size: 0.7rem;
+            font-weight: 700;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            border-radius: 4px;
+            background: var(--accent-gold);
+            color: var(--bg-dark);
+            vertical-align: middle;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            font-family: 'Inter', sans-serif;
         }
 
         .episode-description {
@@ -630,6 +648,29 @@
                 .slider.round:before {
                     border-radius: 50%;
                 }
+
+                .pulse-animation {
+                    animation: pulse 1.5s infinite;
+                    border-color: var(--accent-gold) !important;
+                    color: var(--accent-gold) !important;
+                }
+
+                @keyframes pulse {
+                    0% {
+                        transform: scale(1);
+                        box-shadow: 0 0 0 0 rgba(212, 175, 55, 0.4);
+                    }
+
+                    70% {
+                        transform: scale(1.05);
+                        box-shadow: 0 0 0 10px rgba(212, 175, 55, 0);
+                    }
+
+                    100% {
+                        transform: scale(1);
+                        box-shadow: 0 0 0 0 rgba(212, 175, 55, 0);
+                    }
+                }
             </style>
         </header>
 
@@ -649,11 +690,11 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
-                    <h2 class="episode-title">Die erweiterte Studienanalyse</h2>
+                    <div class="episode-tag">Das Hörbuch <span class="badge">BETA</span></div>
+                    <h2 class="episode-title">Die Villa Kunterbunt (Epos)</h2>
 
                     <div class="info-bar">
-                        <button class="info-btn" onclick="toggleInfo(1)">TTS</button>
+                        <button id="tts-btn-1" class="info-btn" onclick="toggleInfo(1)">TTS</button>
                         <button class="info-btn source-btn has-source"
                             onclick="openSource('../documents/das_villa_kunterbunt_kompendium.pdf')">Quelle</button>
                     </div>
@@ -868,6 +909,32 @@
             autoplayToggle.checked = autoplayEnabled;
         }
 
+        function triggerTTSHint(id) {
+            const hintKey = 'tts_hint_shown_meta'; // Unique key for meta
+            if (localStorage.getItem(hintKey)) return;
+
+            const ttsBtn = document.getElementById(`tts-btn-${id}`);
+            const infoText = document.getElementById(`info-text-${id}`);
+
+            if (!ttsBtn || !infoText) return;
+
+            setTimeout(() => {
+                ttsBtn.classList.add('pulse-animation');
+                setTimeout(() => {
+                    infoText.classList.add('visible');
+                    setTimeout(() => {
+                        infoText.classList.remove('visible');
+                        ttsBtn.classList.add('pulse-animation');
+                        setTimeout(() => {
+                            ttsBtn.classList.remove('pulse-animation');
+                        }, 3000);
+                    }, 4000);
+                }, 1000);
+            }, 500);
+
+            localStorage.setItem(hintKey, 'true');
+        }
+
         function toggleAutoplay() {
             autoplayEnabled = !autoplayEnabled;
             localStorage.setItem('autoplay', autoplayEnabled);
@@ -891,6 +958,7 @@
 
         window.addEventListener('DOMContentLoaded', () => {
             initPlayer(1);
+            triggerTTSHint(1);
 
             // Initialize autoplay listeners for all episodes
             document.querySelectorAll('audio[id^="audio-player-"]').forEach(audio => {
