--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -645,9 +645,25 @@
 
             <div class="nav-links"
                 style="border-top: none; margin-top: 20px; padding-top: 0; display: flex; justify-content: center; flex-direction: column; gap: 15px;">
+                <div style="display: flex; justify-content: center; gap: 20px;">
+                    <button class="nav-link" disabled style="opacity: 0.5; cursor: not-allowed;">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M19 12H5M12 19l-7-7 7-7" />
+                        </svg>
+                        <span>Vorherige Episode</span>
+                    </button>
+                    <a href=".queue/satire.html" class="nav-link">
+                        <span>Nächste Episode</span>
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M5 12h14M12 5l7 7-7 7" />
+                        </svg>
+                    </a>
+                </div>
                 <div style="display: flex; justify-content: center;">
                     <a href="index.html" class="nav-link highlight">
-                        <span>Zur Übersicht</span>
+                        <span>Alle Episoden</span>
                     </a>
                 </div>
             </div>
