--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -826,10 +826,10 @@
                                 oninput="setVolume(2, this.value)">
                         </div>
                     </div>
-                    <audio id="audio-player-2" src="../audio/villa_kunterbunt_satire_podcast.mp3"
+                    <audio id="audio-player-2" src="../audio/.queue/villa_kunterbunt_satire_podcast.mp3"
                         preload="metadata"></audio>
                     <div style="margin-top: 15px; text-align: right; width: 100%;">
-                        <a href="satire.html" class="action-link">Zur Folge</a>
+                        <a href=".queue/satire.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
             </article>
@@ -908,10 +908,10 @@
                                 oninput="setVolume(3, this.value)">
                         </div>
                     </div>
-                    <audio id="audio-player-3" src="../audio/villa_kunterbunt_analyse_podcast.mp3"
+                    <audio id="audio-player-3" src="../audio/.queue/villa_kunterbunt_analyse_podcast.mp3"
                         preload="metadata"></audio>
                     <div style="margin-top: 15px; text-align: right; width: 100%;">
-                        <a href="analyse.html" class="action-link">Zur Folge</a>
+                        <a href=".queue/analyse.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
             </article>
@@ -989,10 +989,10 @@
                                 oninput="setVolume(4, this.value)">
                         </div>
                     </div>
-                    <audio id="audio-player-4" src="../audio/villa_kunterbunt_dossier_podcast.mp3"
+                    <audio id="audio-player-4" src="../audio/.queue/villa_kunterbunt_dossier_podcast.mp3"
                         preload="metadata"></audio>
                     <div style="margin-top: 15px; text-align: right; width: 100%;">
-                        <a href="dossier.html" class="action-link">Zur Folge</a>
+                        <a href=".queue/dossier.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
             </article>
@@ -1066,10 +1066,10 @@
                                 oninput="setVolume(5, this.value)">
                         </div>
                     </div>
-                    <audio id="audio-player-5" src="../audio/villa_kunterbunt_deepdive_podcast.mp3"
+                    <audio id="audio-player-5" src="../audio/.queue/villa_kunterbunt_deepdive_podcast.mp3"
                         preload="metadata"></audio>
                     <div style="margin-top: 15px; text-align: right; width: 100%;">
-                        <a href="deepdive.html" class="action-link">Zur Folge</a>
+                        <a href=".queue/deepdive.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
             </article>
@@ -1143,10 +1143,10 @@
                                 oninput="setVolume(6, this.value)">
                         </div>
                     </div>
-                    <audio id="audio-player-6" src="../audio/villa_kunterbunt_zupftest_podcast.mp3"
+                    <audio id="audio-player-6" src="../audio/.queue/villa_kunterbunt_zupftest_podcast.mp3"
                         preload="metadata"></audio>
                     <div style="margin-top: 15px; text-align: right; width: 100%;">
-                        <a href="zupftest.html" class="action-link">Zur Folge</a>
+                        <a href=".queue/zupftest.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
             </article>
@@ -1220,10 +1220,10 @@
                                 oninput="setVolume(7, this.value)">
                         </div>
                     </div>
-                    <audio id="audio-player-7" src="../audio/villa_kunterbunt_die_studie_podcast.mp3"
+                    <audio id="audio-player-7" src="../audio/.queue/villa_kunterbunt_die_studie_podcast.mp3"
                         preload="metadata"></audio>
                     <div style="margin-top: 15px; text-align: right; width: 100%;">
-                        <a href="systemanalyse.html" class="action-link">Zur Folge</a>
+                        <a href=".queue/systemanalyse.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
             </article>
@@ -1297,10 +1297,10 @@
                                 oninput="setVolume(8, this.value)">
                         </div>
                     </div>
-                    <audio id="audio-player-8" src="../audio/villa_kunterbunt_korrespondenz_epos.mp3"
+                    <audio id="audio-player-8" src="../audio/.queue/villa_kunterbunt_korrespondenz_epos.mp3"
                         preload="metadata"></audio>
                     <div style="margin-top: 15px; text-align: right; width: 100%;">
-                        <a href="korrespondenz_epos.html" class="action-link">Zur Folge</a>
+                        <a href=".queue/korrespondenz_epos.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
             </article>
