Update meta section naming to 'Die erweiterte Studienanalyse' and record project methodology

--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -690,8 +690,8 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">Das Hörbuch <span class="badge">BETA</span></div>
-                    <h2 class="episode-title">Die Villa Kunterbunt (Epos)</h2>
+                    <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
+                    <h2 class="episode-title">Die erweiterte Studienanalyse</h2>
 
                     <div class="info-bar">
                         <button id="tts-btn-1" class="info-btn" onclick="toggleInfo(1)">TTS</button>
@@ -828,9 +828,9 @@
                 const absoluteArtworkUrl = new URL(artworkPath, window.location.href).href;
 
                 setupMediaSession(audio, {
-                    title: "Die Villa Kunterbunt | Die erweiterte Studienanalyse",
+                    title: "E01: Die erweiterte Studienanalyse",
                     artist: "Die Villa Kunterbunt",
-                    album: "Das Kompendium",
+                    album: "Das Villa Kunterbunt Kompendium",
                     artwork: [
                         { src: absoluteArtworkUrl, sizes: '512x512', type: 'image/png' }
                     ]
