--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -992,9 +992,9 @@
             if ('mediaSession' in navigator) {
                 audio.addEventListener('play', () => {
                     navigator.mediaSession.metadata = new MediaMetadata({
-                        title: "Die Villa Kunterbunt | Korrespondenz System Analyse",
+                        title: "E01: Die erweiterte Studienanalyse",
                         artist: "Die Villa Kunterbunt",
-                        album: "Das Kompendium",
+                        album: "Das Villa Kunterbunt Kompendium",
                         artwork: [
                             { src: new URL("../images/thumbs/das_villa_kunterbunt_kompendium_audiobook_cover_front_thumb.png", window.location.href).href, sizes: '512x512', type: 'image/png' }
                         ]
