--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -650,7 +650,7 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Das Epos</div>
+            <div class="subtitle">Korrespondenz Epos</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
@@ -684,8 +684,8 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">Episode 01 <span class="badge">BETA</span></div>
-                    <h2 class="episode-title">Das Hörbuch (Epos)</h2>
+                    <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
+                    <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
                     <div class="info-bar">
                         <button class="info-btn" id="tts-btn-1" onclick="toggleInfo(1)">TTS</button>
