Adjust spacing for meta podcast title

--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -210,7 +210,7 @@
         .episode-title {
             font-family: 'Playfair Display', serif;
             font-size: 2.2rem;
-            margin: 0;
+            margin: 0 0 20px 0;
         }
 
         .episode-description {
