--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -853,9 +853,28 @@
             audio.volume = value;
         }
 
+        // TTS Auto-Close Logic
+        const ttsTimeouts = {};
+
         function toggleInfo(id) {
             const infoText = document.getElementById(`info-text-${id}`);
-            infoText.classList.toggle('visible');
+            if (!infoText) return;
+
+            // Clear existing timeout
+            if (ttsTimeouts[id]) {
+                clearTimeout(ttsTimeouts[id]);
+                delete ttsTimeouts[id];
+            }
+
+            const isVisible = infoText.classList.toggle('visible');
+
+            if (isVisible) {
+                // Auto-close after 10 seconds
+                ttsTimeouts[id] = setTimeout(() => {
+                    infoText.classList.remove('visible');
+                    delete ttsTimeouts[id];
+                }, 10000);
+            }
         }
 
         function openSource(url) {
@@ -878,26 +897,20 @@
         }
 
         function triggerTTSHint(id) {
-            const hintKey = 'tts_hint_shown';
+            const hintKey = 'cowork_index_tts_hint_shown';
             if (localStorage.getItem(hintKey)) return;
 
             const ttsBtn = document.getElementById(`tts-btn-${id}`);
-            const infoText = document.getElementById(`info-text-${id}`);
 
-            if (!ttsBtn || !infoText) return;
+            if (!ttsBtn) return;
 
             setTimeout(() => {
+                toggleInfo(id); // Auto-open with 10s timer
+
                 ttsBtn.classList.add('pulse-gold');
                 setTimeout(() => {
-                    infoText.classList.add('visible');
-                    setTimeout(() => {
-                        infoText.classList.remove('visible');
-                        ttsBtn.classList.add('pulse-gold');
-                        setTimeout(() => {
-                            ttsBtn.classList.remove('pulse-gold');
-                        }, 3000);
-                    }, 4000);
-                }, 1000);
+                    ttsBtn.classList.remove('pulse-gold');
+                }, 3000);
             }, 500);
 
             localStorage.setItem(hintKey, 'true');
