--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -229,11 +229,8 @@
             display: flex;
             align-items: center;
             gap: 20px;
-            width: 100%;
-            max-width: 500px;
             margin-top: auto;
             flex-wrap: wrap;
-            justify-content: center;
         }
 
         .play-btn {
@@ -879,10 +876,27 @@
             audio.volume = value;
         }
 
+        // TTS Auto-Close Logic
+        const ttsTimeouts = {};
+
         function toggleInfo(id) {
             const infoText = document.getElementById(`info-text-${id}`);
-            if (infoText) {
-                infoText.classList.toggle('visible');
+            if (!infoText) return;
+
+            // Clear existing timeout
+            if (ttsTimeouts[id]) {
+                clearTimeout(ttsTimeouts[id]);
+                delete ttsTimeouts[id];
+            }
+
+            const isVisible = infoText.classList.toggle('visible');
+
+            if (isVisible) {
+                // Auto-close after 10 seconds
+                ttsTimeouts[id] = setTimeout(() => {
+                    infoText.classList.remove('visible');
+                    delete ttsTimeouts[id];
+                }, 10000);
             }
         }
 
@@ -897,22 +911,16 @@
             if (localStorage.getItem(hintKey)) return;
 
             const ttsBtn = document.getElementById(`tts-btn-${id}`);
-            const infoText = document.getElementById(`info-text-${id}`);
 
-            if (!ttsBtn || !infoText) return;
+            if (!ttsBtn) return;
 
             setTimeout(() => {
+                toggleInfo(id); // Auto-open with 10s timer
+
                 ttsBtn.classList.add('pulse-gold');
                 setTimeout(() => {
-                    infoText.classList.add('visible');
-                    setTimeout(() => {
-                        infoText.classList.remove('visible');
-                        ttsBtn.classList.add('pulse-gold');
-                        setTimeout(() => {
-                            ttsBtn.classList.remove('pulse-gold');
-                        }, 3000);
-                    }, 4000);
-                }, 1000);
+                    ttsBtn.classList.remove('pulse-gold');
+                }, 3000);
             }, 500);
 
             localStorage.setItem(hintKey, 'true');
