--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -550,7 +550,7 @@
             margin-bottom: 20px;
             border-left: 3px solid var(--accent-gold);
             animation: fadeIn 0.3s ease;
-            text-align: left;
+            text-align: left !important;
         }
 
         .info-text.visible {
@@ -851,30 +851,46 @@
                     }
                 }
 
-                function triggerTTSHint(id) {
-                    const hintKey = 'tts_hint_shown';
+                // Interaction Logic
+                function triggerTTSHint() {
+                    const hintKey = 'meta_ep1_tts_hint_shown';
                     if (localStorage.getItem(hintKey)) return;
 
-                    const ttsBtn = id ? document.getElementById(`tts-btn-${id}`) : document.getElementById('tts-btn');
-                    const infoText = id ? document.getElementById(`info-text-${id}`) : document.getElementById('info-text');
-
-                    if (!ttsBtn || !infoText) return;
+                    const ttsBtn = document.getElementById('tts-btn');
 
                     setTimeout(() => {
+                        toggleInfo(); // Auto-open with 10s timer
+
                         ttsBtn.classList.add('pulse-gold');
                         setTimeout(() => {
-                            infoText.classList.add('visible');
-                            setTimeout(() => {
-                                infoText.classList.remove('visible');
-                                ttsBtn.classList.add('pulse-gold');
-                                setTimeout(() => {
-                                    ttsBtn.classList.remove('pulse-gold');
-                                }, 3000);
-                            }, 4000);
-                        }, 1000);
+                            ttsBtn.classList.remove('pulse-gold');
+                        }, 3000);
                     }, 500);
 
                     localStorage.setItem(hintKey, 'true');
+                }
+
+                let ttsTimeout;
+
+                function toggleInfo() {
+                    const infoText = document.getElementById('info-text');
+
+                    if (ttsTimeout) clearTimeout(ttsTimeout);
+
+                    const isVisible = infoText.classList.toggle('visible');
+
+                    if (isVisible) {
+                        ttsTimeout = setTimeout(() => {
+                            infoText.classList.remove('visible');
+                            ttsBtn.classList.add('pulse-gold');
+                            setTimeout(() => {
+                                ttsBtn.classList.remove('pulse-gold');
+                            }, 3000);
+                        }, 4000);
+                    }, 1000);
+                }, 500);
+
+                localStorage.setItem(hintKey, 'true');
                 }
 
             </script>
@@ -1054,9 +1070,20 @@
             audio.volume = value;
         }
 
+        let ttsTimeout;
+
         function toggleInfo() {
             const infoText = document.getElementById('info-text');
-            infoText.classList.toggle('visible');
+
+            if (ttsTimeout) clearTimeout(ttsTimeout);
+
+            const isVisible = infoText.classList.toggle('visible');
+
+            if (isVisible) {
+                ttsTimeout = setTimeout(() => {
+                    infoText.classList.remove('visible');
+                }, 10000);
+            }
         }
 
         function openSource(url) {
