Rename MP3s to snake_case and update HTML links

--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -641,7 +641,7 @@
                         oninput="setVolume(this.value)">
                 </div>
             </div>
-            <audio id="audio-player" src="../audio/Die Villa Kunterbunt - Das Hörbuch.mp3" preload="metadata"></audio>
+            <audio id="audio-player" src="../audio/die_villa_kunterbunt_das_hoerbuch.mp3" preload="metadata"></audio>
 
             <div class="nav-links"
                 style="border-top: none; margin-top: 20px; padding-top: 0; display: flex; justify-content: center; flex-direction: column; gap: 15px;">
