--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -793,7 +793,7 @@
                         oninput="setVolume(this.value)">
                 </div>
             </div>
-            <audio id="audio-player" src="../audio/Die Villa Kunterbunt Anthologie - Das Hörbuch.mp3"
+            <audio id="audio-player" src="../audio/die_villa_kunterbunt_anthologie_das_hoerbuch.mp3"
                 preload="metadata"></audio>
 
             <div class="nav-links"
