Update Podcast Titles, Tags, and Metadata

--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -669,8 +669,8 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">Die Villa Kunterbunt Anthologie (Hörbuch)</div>
-                    <h2 class="episode-title">Das Hörbuch</h2>
+                    <div class="episode-tag">Die Villa Kunterbunt Anthologie | Das Hörbuch</div>
+                    <h2 class="episode-title">Die Villa Kunterbunt Anthologie</h2>
 
                     <div class="info-bar">
                         <button id="tts-btn-1" class="info-btn" onclick="toggleInfo(1)">TTS</button>
