--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -579,7 +579,7 @@
                 </div>
             </div>
 
-            <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
+            <div class="episode-tag">Das Villa Kunterbunt Epos (Hörbuch)</div>
             <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
             <div class="info-bar">
