--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -642,8 +642,8 @@
                 </div>
             </div>
 
-            <div class="episode-tag">Die Villa Kunterbunt Anthologie (Hörbuch)</div>
-            <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
+            <div class="episode-tag">Die Villa Kunterbunt Anthologie | Das Hörbuch</div>
+            <h2 class="episode-title">Die Villa Kunterbunt Anthologie <span class="badge">BETA</span></h2>
 
             <div class="info-bar">
                 <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
