--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -646,7 +646,7 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Korrespondenz Epos</div>
+            <div class="subtitle">Das Korrespondenz Epos</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
@@ -680,7 +680,7 @@
                     </div>
                 </div>
                 <div class="episode-content">
-                    <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
+                    <div class="episode-tag">Das Villa Kunterbunt Epos (Hörbuch)</div>
                     <h2 class="episode-title">Das Hörbuch <span class="badge">BETA</span></h2>
 
                     <div class="info-bar">
