Harmonize Podcast UI, Fix Meta Spacing, Sync Player & TTS Logic

--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -808,7 +808,7 @@
         }
 
         // Persistence Logic
-        const persistenceKey = 'vp_time_main_abook';
+        const persistenceKey = 'vp_time_die_villa_kunterbunt_das_hoerbuch.mp3';
         const savedTime = localStorage.getItem(persistenceKey);
         if (savedTime) {
             audio.currentTime = parseFloat(savedTime);
