--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -468,7 +468,6 @@
             gap: 15px;
             margin-bottom: 20px;
             flex-wrap: wrap;
-            justify-content: center;
         }
 
         .info-btn {
@@ -539,6 +538,21 @@
             display: block !important;
         }
 
+        .badge {
+            display: inline-block;
+            padding: 2px 10px;
+            font-size: 0.8rem;
+            font-weight: 700;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            border-radius: 4px;
+            background: var(--accent-gold);
+            color: var(--bg-dark);
+            vertical-align: middle;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+            font-family: 'Inter', sans-serif;
+        }
+
         .info-text {
             display: none;
             background: rgba(0, 0, 0, 0.3);
@@ -587,20 +601,6 @@
             .player-controls {
                 width: 100%;
                 flex-wrap: wrap;
-                justify-content: center;
-            }
-
-            .info-btn {
-                background: rgba(255, 255, 255, 0.05);
-                border: 1px solid var(--glass-border);
-                color: var(--text-muted);
-                padding: 6px 12px;
-                border-radius: 4px;
-                font-size: 0.75rem;
-                cursor: pointer;
-                transition: all 0.2s;
-                text-transform: uppercase;
-                letter-spacing: 1px;
             }
 
             .info-btn:hover {
@@ -738,8 +738,8 @@
                 </div>
             </div>
 
-            <div class="episode-tag">E01: Die erweiterte Studienanalyse</div>
-            <h2 class="episode-title">Die erweiterte Studienanalyse</h2>
+            <div class="episode-tag">Die erweiterte Studienanalyse</div>
+            <h2 class="episode-title">Die erweiterte Studienanalyse <span class="badge">BETA</span></h2>
 
             <div class="info-bar">
                 <button id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
