--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -245,7 +245,7 @@
             align-items: center;
             gap: 20px;
             margin-top: auto;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
         }
 
         .play-btn {
