Refactor Queue: Move HTML/MP3 to consolidated main/.queue

--- a/core/data/main/podcast/abook.html
+++ b/core/data/main/podcast/abook.html
@@ -653,13 +653,14 @@
                         </svg>
                         <span>Vorherige Episode</span>
                     </button>
-                    <a href=".queue/satire.html" class="nav-link">
+                    <div class="nav-link" disabled
+                        style="opacity: 0.5; cursor: not-allowed; display: flex; align-items: center; gap: 8px;">
                         <span>Nächste Episode</span>
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M5 12h14M12 5l7 7-7 7" />
                         </svg>
-                    </a>
+                    </div>
                 </div>
                 <div style="display: flex; justify-content: center;">
                     <a href="index.html" class="nav-link highlight">
