--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -245,7 +245,7 @@
             align-items: center;
             gap: 20px;
             margin-top: auto;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
         }
 
         .play-btn {
@@ -322,10 +322,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            margin-left: 0;
-            width: 100%;
-            justify-content: center;
-            margin-top: 10px;
+            margin-left: 10px;
         }
 
         /* Responsive */
