--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -208,10 +208,7 @@
         .episode-title {
             font-family: 'Playfair Display', serif;
             font-size: 1.8rem;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            gap: 12px;
+            margin: 0 0 10px;
             line-height: 1.2;
         }
 
