--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -210,7 +210,11 @@
         .episode-title {
             font-family: 'Playfair Display', serif;
             font-size: 2.2rem;
-            margin: 0 0 20px 0;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
         }
 
         .episode-description {
